// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`optionSelectorField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3p uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
        >
          <div
            class="uv_q4eszse"
          >
            <div
              class="uv_q4eszs4 uv_q4eszs3"
              style="--uv_q4eszs0: none;"
            >
              <div
                aria-disabled="false"
                class="cm-theme"
              >
                <div
                  class="cm-editor ͼ1 ͼ3 ͼ4 ͼ3u ͼ1p"
                >
                  <div
                    aria-live="polite"
                    class="cm-announced"
                  />
                  <div
                    class="cm-scroller"
                    tabindex="-1"
                  >
                    <div
                      aria-hidden="true"
                      class="cm-gutters"
                      style="min-height: 14px; position: sticky;"
                    >
                      <div
                        class="cm-gutter cm-lineNumbers"
                      >
                        <div
                          class="cm-gutterElement"
                          style="height: 0px; visibility: hidden; pointer-events: none;"
                        >
                          9
                        </div>
                        <div
                          class="cm-gutterElement"
                          style="height: 14px;"
                        >
                          1
                        </div>
                      </div>
                      <div
                        class="cm-gutter cm-foldGutter"
                      >
                        <div
                          class="cm-gutterElement"
                          style="height: 0px; visibility: hidden; pointer-events: none;"
                        >
                          <span
                            title="Unfold line"
                          >
                            ›
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-multiline="true"
                      autocapitalize="off"
                      autocorrect="off"
                      class="cm-content"
                      contenteditable="true"
                      data-language="javascript"
                      role="textbox"
                      spellcheck="false"
                      style="tab-size: 4;"
                      translate="no"
                      writingsuggestions="false"
                    >
                      <div
                        class="cm-line"
                      >
                        <br />
                      </div>
                    </div>
                    <div
                      aria-hidden="true"
                      class="cm-layer cm-layer-above cm-cursorLayer"
                      style="z-index: 150; animation-duration: 1200ms;"
                    />
                    <div
                      aria-hidden="true"
                      class="cm-layer cm-selectionLayer"
                      style="z-index: -2;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`optionSelectorField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3p uv_toi52u5v"
      >
        <div
          class="uv_q4eszs1 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
        >
          <div
            class="uv_q4eszse"
          >
            <div
              class="uv_q4eszs5 uv_q4eszs3"
              style="--uv_q4eszs0: none;"
            >
              <div
                aria-disabled="true"
                class="cm-theme"
              >
                <div
                  class="cm-editor ͼ1 ͼ3 ͼ4 ͼ3x ͼ1p"
                >
                  <div
                    aria-live="polite"
                    class="cm-announced"
                  />
                  <div
                    class="cm-scroller"
                    tabindex="-1"
                  >
                    <div
                      aria-hidden="true"
                      class="cm-gutters"
                      style="min-height: 14px; position: sticky;"
                    >
                      <div
                        class="cm-gutter cm-lineNumbers"
                      >
                        <div
                          class="cm-gutterElement"
                          style="height: 0px; visibility: hidden; pointer-events: none;"
                        >
                          9
                        </div>
                        <div
                          class="cm-gutterElement"
                          style="height: 14px;"
                        >
                          1
                        </div>
                      </div>
                      <div
                        class="cm-gutter cm-foldGutter"
                      >
                        <div
                          class="cm-gutterElement"
                          style="height: 0px; visibility: hidden; pointer-events: none;"
                        >
                          <span
                            title="Unfold line"
                          >
                            ›
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-multiline="true"
                      aria-readonly="true"
                      autocapitalize="off"
                      autocorrect="off"
                      class="cm-content"
                      contenteditable="true"
                      data-language="javascript"
                      role="textbox"
                      spellcheck="false"
                      style="tab-size: 4;"
                      translate="no"
                      writingsuggestions="false"
                    >
                      <div
                        class="cm-line"
                      >
                        <br />
                      </div>
                    </div>
                    <div
                      aria-hidden="true"
                      class="cm-layer cm-layer-above cm-cursorLayer"
                      style="z-index: 150; animation-duration: 1200ms;"
                    />
                    <div
                      aria-hidden="true"
                      class="cm-layer cm-selectionLayer"
                      style="z-index: -2;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
